--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -36,7 +36,7 @@
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион   вещей,   в которые   никто   не   верил</p>
-          <button class="bet-button"><a href="">Сделать ставку</a></button>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
