Исправил замечания ревьюера

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </a>
           </li>
         </ul>
-        <a href="" class="lots__look-more-link">Посмотреть больше</a>
+        <a href="" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__columm">
@@ -87,7 +87,7 @@
       <address class="address">
         <a href="tel:+99995555555" class="border">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="border">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
